Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriIntegerRettext.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, text> yoda
        text ret = yoda:useForce(one, two)
        output "passed"
     end
end
